<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pantini"
    android:backgroundTint="#655D5D"
    android:backgroundTintMode="add"
    tools:context=".MainActivity2Nivel2">

    <TextView
        android:id="@+id/textView_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="29dp"
        android:text="@string/jugador_nombre"
        android:textColor="@android:color/background_dark"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="71dp"
        android:text="@string/total_score"
        android:textColor="@android:color/background_dark"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/textView_chances"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="113dp"
        android:text="@string/et_chances"
        android:textColor="@android:color/background_dark"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/imageView_chances"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="133dp"
        android:layout_marginTop="117dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/treschances" />

    <ImageView
        android:id="@+id/imageView_numDos"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="193dp"
        android:layout_toEndOf="@+id/imageView_signo"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cero" />

    <ImageView
        android:id="@+id/imageView_signo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="146dp"
        android:layout_marginTop="192dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/adicion" />

    <ImageView
        android:id="@+id/imageView_numUno"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="191dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/cero" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="154dp"
        android:background="@drawable/fondoboton"
        android:onClick="comparar"
        android:text="@string/boton_probar"
        android:textColor="@android:color/background_dark" />

    <EditText
        android:id="@+id/editText_resultado"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="157dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="195dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:hint="@string/et_respuesta"
        android:inputType="number" />
</RelativeLayout>