<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paisaje"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView_personaje"
        android:layout_width="match_parent"
        android:layout_height="413dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        app:srcCompat="@drawable/zorro" />

    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:background="@drawable/fondoet"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="28sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:background="@drawable/fondoboton"
        android:onClick="Jugar"
        android:text="@string/boton"
        android:textColor="@android:color/background_light"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textView_BestScore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp"
        android:background="@drawable/fondoet"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="22sp" />

</RelativeLayout>